--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
-    "concurrently": "^4.1.0",
     "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
