--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "validator": "^13.5.1",
-    "webfontloader": "^1.6.28"
+    "validator": "^13.5.1"
   }
 }
